anv: VK_EXT_memory_budget doesn't know about device local memory
It appears that anv's implementation of VK_EXT_memory_budget looks at the total amount of system memory available, rather than e.g. returning the amount of VRAM on your discrete card. This could lead the application to think it has massively more memory than it ought to (16GB of system memory but only 2GB of VRAM, anyone?).
radv's implementation uses amdgpu ioctls (perhaps AMDGPU_INFO_MEMORY?) to query this info from the kernel. We should do something similar...